2018-07-22

	* jsClass now must be a unicode string; code that should keep running
	  in python2 needs to be changed.

2006-06-12  Glyph Lefkowitz <glyph@divmod.com>

	* Nevow 0.9.0: see NEWS.txt for details.

2006-04-07  Jp Calderone <exarkun@divmod.com>

	* Nevow 0.8.0 released

2006-03-30  Tommi Virtanen <tv@twistedmatrix.com>

       * nevow/static.py: Fix handling of range requests on static files.

2006-03-30  Jp Calderone <exarkun@divmod.com>

       * formless/freeform-defaults.css, formless/annotate.py: Style and
       feedback improvements.

2006-03-29  Jp Calderone <exarkun@divmod.com>

       * examples/formbuilder/: Apply Cory Dodt's patch to make this
       example work again.

2006-03-27  Jp Calderone <exarkun@divmod.com>

       * nevow/athena.py: Add getInitialArguments method which will be
       invoked during rendering and may return a list or tuple of objects
       which will be be passed to the client-side Widget's __init__ method.

2006-03-24  Allen Short <washort@divmod.com>

	* Upgrade MochiKit to 1.2

2006-03-17  Tristan Seligmann <mithrandi@mithrandi.za.net>

	* Remove usage of twisted.python.components.Interface from formless. 
	Convert TypedInterface to zope.interface.

2006-03-17  Jp Calderone <exarkun@divmod.com>

	* nevow/json.py: Improve (hopefully correct this time ;) unicode
	support.

2006-03-08  Valentino Volonghi <dialtone@divmod.com>

	* Remove usage of twisted.python.components.Interface from nevow. 
	Remove compyCompat.

2006-02-28  Jp Calderone <exarkun@divmod.com>

	* nevow/athena.py: Make the "Connection: Close" header of Athena
	transport responses optional (toggleable by a flag on LivePage) to
	allow TCP connection setup overhead to be avoided.

2006-02-15  Tristan Seligmann <mithrandi@mithrandi.za.net>

	* nevow/athena.js, nevow/athena.py: Pass JavaScript call-stack
	information back to the server and include it in logged tracebacks
	(Firefox only).

2006-02-14  Jp Calderone <exarkun@divmod.com>
